[gd_scene load_steps=24 format=2]

[ext_resource path="res://Nodes/Map/ZIndexer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Enemies/Common/TargetingController.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Enemies/Common/ContextController.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Enemies/Cruel/run.png" type="Texture2D" id=4]
[ext_resource path="res://Resources/Materials/ArthomaSuiciderExplode.gdshader" type="Shader" id=5]
[ext_resource path="res://Nodes/Enemies/Cruel/attack.png" type="Texture2D" id=6]
[ext_resource path="res://Nodes/Enemies/Cruel/xplode.png" type="Texture2D" id=7]
[ext_resource path="res://Nodes/Enemies/CrystalUrasectus/CrystalUrasectus.gd" type="Script" id=8]
[ext_resource path="res://Resources/Misc/normal_no_blend_256.png" type="Texture2D" id=9]
[ext_resource path="res://Nodes/Pickups/LumenClumpPickup.tscn" type="PackedScene" id=10]
[ext_resource path="res://Nodes/Objects/Helper/EnemyLoot.gd" type="Script" id=11]
[ext_resource path="res://Nodes/Enemies/Cruel/idle.png" type="Texture2D" id=12]
[ext_resource path="res://Nodes/Enemies/Cruel/death.png" type="Texture2D" id=13]
[ext_resource path="res://Nodes/Enemies/Cruel/walk.png" type="Texture2D" id=14]
[ext_resource path="res://Nodes/Effects/Shadow.gd" type="Script" id=15]

[sub_resource type="Animation" id=36]
length = 40.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 7 ]
}

[sub_resource type="Animation" id=37]
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=38]
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=22]
length = 18.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=39]
length = 31.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ ExtResource( 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="CircleShape2D" id=21]

[sub_resource type="CapsuleShape2D" id=11]
radius = 3.0
height = 4.0

[sub_resource type="ShaderMaterial" id=35]
shader = ExtResource( 5 )
shader_param/hue = 0.0
shader_param/saturation = 0.0
shader_param/value = 0.0
shader_param/position = Vector2( 0, 0 )
shader_param/bloat = 1.433
shader_param/normal_map = ExtResource( 9 )

[node name="Cruel" type="Node2D"]
z_index = 800
z_as_relative = false
script = ExtResource( 8 )
path_resolution = 10
walk_speed = 30.0
animation_travel_distance = 18
attack_distance = 40.0
collision_radius = 16.0
base_playback_speed = 60.0
rotation_reaction_speed = 0.05
max_distance_from_spawn_position = 6000.0

[node name="ContextController" type="Node" parent="."]
script = ExtResource( 3 )
heading_map_resolution = 9
sight_range = 250.0

[node name="TargetController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 47.85
anims/attack = SubResource( 36 )
anims/death = SubResource( 37 )
anims/idle = SubResource( 38 )
anims/run = SubResource( 22 )
anims/walk = SubResource( 39 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 14 )
hframes = 7
vframes = 5
script = ExtResource( 15 )

[node name="Hitbox" type="Area2D" parent="Sprite2D"]
visible = false
scale = Vector2( 6.66667, 6.66667 )
collision_layer = 0
collision_mask = 0

[node name="Shape2D" type="CollisionShape2D" parent="Sprite2D/Hitbox"]
shape = SubResource( 21 )

[node name="AttackBox" type="Area2D" parent="Sprite2D"]
visible = false
rotation = 0.410152
scale = Vector2( 12, 12 )

[node name="AttackShape" type="CollisionShape2D" parent="Sprite2D/AttackBox"]
position = Vector2( 13.9897, 0.976439 )
rotation = -0.846982
shape = SubResource( 11 )
disabled = true

[node name="FallDamage" type="Area2D" parent="Sprite2D"]
visible = false
scale = Vector2( 6.66667, 6.66667 )
collision_layer = 0
collision_mask = 0

[node name="Shape2D" type="CollisionShape2D" parent="Sprite2D/FallDamage"]
shape = SubResource( 21 )
disabled = true

[node name="DeathTerrainDamage" type="Marker2D" parent="Sprite2D"]

[node name="ZIndexer" parent="." instance=ExtResource( 1 )]
z_index = 800

[node name="Loot" type="Node2D" parent="."]
visible = false
script = ExtResource( 11 )
probability = 0.3

[node name="LumenClump" parent="Loot" instance=ExtResource( 10 )]

[node name="Sprite2" type="Sprite2D" parent="."]
visible = false
material = SubResource( 35 )
position = Vector2( 1.04994, -0.104996 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
